*: fix: content shifting from fonts with optional and preloading

--- a/www/css/_fonts/_acme.scss
+++ b/www/css/_fonts/_acme.scss
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Acme&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Acme&display=optional");
 
 @mixin font-acme {
   font-family: "Acme", serif;
   font-size: 16px;
-  font-display: swap;
+  font-display: optional;
 }
 
 .acme {
